<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".api.retrofit.RetrofitSignUpActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/register" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:imeOptions="actionNext"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/full_name"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:imeOptions="actionNext"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_marginTop="10dp"
            android:imeOptions="actionDone"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="Autofill,UnusedAttribute" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:background="@android:color/transparent"
            android:textColor="@color/colorBlack"/>

        <Button
            android:id="@+id/openListBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:text="@string/open_list"
            android:background="@android:color/transparent"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>
</layout>