<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.elfstudio.login.ui.login.LoginViewModel" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.login.LoginActivity">

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mail"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="138dp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="262dp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/login"
            android:textColor="@color/colorBlack"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/don_t_have_account_create_new"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_marginTop="25dp"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>